--- a/Guidelines.Rmd
+++ b/Guidelines.Rmd
@@ -11,11 +11,11 @@ output:
     toc_float: true
     number_sections: true
 ## OPTION B: Word Document
-  # word_document:
-  #   reference_docx: ./src/guidelines-template.docx
+   # word_document:
+   #   reference_docx: ./src/guidelines-template.docx
 ## OPTION C: PDF Document
-#   pdf_document:
-#     latex_engine: lualatex
+   # pdf_document:
+   #   latex_engine: lualatex
 ---
 
 ```{r setup, include=FALSE}
@@ -127,7 +127,7 @@ Project documentation is not a final task, but an ongoing process starting from 
 
 ### Electronic lab-book
 
-At the start of each new project, create an electronic lab-book to document your workflow and decisions therein. It is of major importance that you keep this lab-book updated. For the ease of use we recommend simple .doc files (MS Word, Libre Office etc.) to keep record of our work. Write down important thoughts, things you have tried, also failed experiments. Try to use clear and comprehensible notes. Although this generates some additional effort you will realize soon that it will help you and others to track your work and make it reproducible. We highly recommend to use GitHub as version control of your project. You have to connect your GitHub account to the EcoDynIZW organization on [GitHub](https://github.com/EcoDynIZW/d6) (https://github.com/EcoDynIZW/d6) to share code with colleagues. Please create repositories on the EcoDynIZW account and not on your private account! It is mandatory to hand over the electronic lab-book to the institute as part of the ‘Safeguarding and Storing of Primary Data’ regulation of the German Research Council DFG after finishing your project. 
+At the start of each new project, create an electronic lab-book to document your workflow and decisions therein. It is of major importance that you keep this lab-book updated. For the ease of use we recommend simple .doc files (MS Word, Libre Office etc.) to keep record of our work. Write down important thoughts, things you have tried, also failed experiments. Try to use clear and comprehensible notes. Although this generates some additional effort you will realize soon that it will help you and others to track your work and make it reproducible. We highly recommend to use GitHub as version control of your project. You have to connect your GitHub account to the EcoDynIZW organization on [GitHub](https://github.com/EcoDynIZW) (https://github.com/EcoDynIZW) to share code with colleagues. Please create repositories on the EcoDynIZW account and not on your private account! It is mandatory to hand over the electronic lab-book to the institute as part of the ‘Safeguarding and Storing of Primary Data’ regulation of the German Research Council DFG after finishing your project. 
 To document scripting we recommend to use R Markdown (`.rmd`) files if possible. Between your code chunks you should annotate the script with everything that is necessary to understand and follow the code. Additionally, if you push new code to GitHub for version control, you have to comment on your committed code as well. It may be necessary to have an additional word document.
 
 
